longin finish regist 1

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -14,6 +14,5 @@ table { border-collapse:collapse; }
 a {text-decoration:none;color: #777777; }
 h1,h2,h3,h4,h5,h6 {font-weight:normal;font-size:1em;}  /*设置h标签的大小，设置跟父亲一样大的字体font-size:100%;*/
 i,em{font-style:normal;text-decoration:none;}
-
-button{padding: 0;border: 0;}
+button{padding: 0;border: 0;outline: none;} /* 去除按钮默认样式   outline: none 去除选中的样式*/
 
