--- a/src/css/bottom.css
+++ b/src/css/bottom.css
@@ -1,3 +1,7 @@
+.pub-footer .pub-footer-bottom { border-top: 1px solid #ccc; text-align: center; }
+
+.pub-footer .pub-footer-bottom p { color: #666; word-spacing: 5px; padding: 10px 0; }
+
 .pub-footer .pub-footer-top .same { height: 147px; float: left; margin: 30px 0; }
 
 .pub-footer .pub-footer-top .same h5 { font-size: 16px; padding-top: 3px; }
@@ -32,6 +36,4 @@
 
 .pub-footer .pub-footer-top .pub-footer-right div p.bottom { line-height: 41px; }
 
-.pub-footer .pub-footer-bottom { height: 66px; border-top: 1px solid #ccc; text-align: center; }
-
-.pub-footer .pub-footer-bottom p { color: #666; word-spacing: 5px; padding: 10px 0; }
+.pub-footer .pub-footer-bottom { height: 66px; }
