--- a/src/css/goodlist.css
+++ b/src/css/goodlist.css
@@ -1,8 +1,4 @@
-.mallvv-current-nav { height: 40px; line-height: 40px; }
-
-.mallvv-current-nav i { font-size: 14px; color: #AAAAAA; margin-left: 1px; }
-
-.mallvv-current-nav span { margin: 0 3px; }
+.main-right .sort-type .address-select span.address::after { content: ""; position: relative; font-size: 0px; line-height: 0; vertical-align: middle; display: inline-block; width: 0px; height: 0px; border-width: 4px; border-color: #777 transparent transparent transparent; border-style: solid dashed dashed dashed; transition: all .3s ease; transform-origin: 50% 30%; }
 
 .title { height: 37px; padding-left: 10px; line-height: 37px; background: #F5F5F5; }
 
@@ -12,7 +8,17 @@
 
 .main-left .type .title { border-top: 2px solid #C8C8C8; }
 
-.main-left .type-content { margin-bottom: 10px; background: #f5c; min-height: 206px; }
+.main-left .type-content { margin-bottom: 10px; min-height: 206px; padding-left: 10px; }
+
+.main-left .type-content li { padding-left: 15px; }
+
+.main-left .type-content li ul { margin-left: 20px; }
+
+.main-left .type-content i { display: inline-block; width: 10px; height: 10px; margin-right: 5px; border: 1px solid #ccc; background: url(../img/common/2014shop_background_img.png) no-repeat; }
+
+.main-left .type-content i:hover { border-color: #FFA500; }
+
+.main-left .type-content i.open { background-position: -11px 0; }
 
 .main-left .recently-browsee { margin-top: 10px; }
 
@@ -22,22 +28,98 @@
 
 .main-right { width: 980px; }
 
-.main-right .sort-type { border: 1px solid #ccc; padding-right: 6px; }
+.main-right .sort-type { border: 1px solid #ccc; margin-bottom: 10px; padding-right: 6px; }
 
 .main-right .sort-type dl { margin-right: 73px; }
 
-.main-right .sort-type dl dt, .main-right .sort-type dl dd { float: left; padding: 10px; line-height: 20px; border-right: 1px solid #ccc; }
+.main-right .sort-type dl dt, .main-right .sort-type dl dd { float: left; padding: 9px; line-height: 20px; border-right: 1px solid #ccc; }
+
+.main-right .sort-type dl dd i { display: inline-block; width: 7px; height: 10px; background: url(../img/common/2014shop_background_img.png) no-repeat 0 -11px; }
+
+.main-right .sort-type dl dd.active { background: #fff; }
+
+.main-right .sort-type dl dd.active.desc i { background-position: -7px -11px; }
+
+.main-right .sort-type dl dd.active.asc i { background-position: -14px -11px; }
 
 .main-right .sort-type p { display: inline-block; }
 
-.main-right .sort-type .address-select { margin-left: 4px; display: inline-block; width: 70px; height: 20px; border: 1px solid #ccc; margin-top: 8px; }
+.main-right .sort-type .address-select { position: relative; height: 20px; margin-top: 8px; margin-left: 4px; line-height: 20px; }
 
-.main-right .sort-type .page { width: 50px; height: 20px; border: 1px solid #ccc; box-sizing: border-box; line-height: 20px; text-align: center; margin: 8px 2px; }
+.main-right .sort-type .address-select span.address { display: inline-block; width: 70px; height: 20px; padding: 0 5px; border: 1px solid #ccc; background: #fff; position: relative; }
 
-.main-right .current-goodlist { height: 1012px; background: #1de; }
+.main-right .sort-type .address-select span.address::after { right: -8px; }
 
-.main-right .goodlist-page { margin: 10px auto 20px; height: 38px; background: #5fa; }
+.main-right .sort-type .address-select:hover span.address { border-bottom-color: #fff; z-index: 11; }
 
-.main-right .likeshop { min-height: 120px; background: #f14; }
+.main-right .sort-type .address-select:hover span.address::after { transform: rotate(180deg); }
 
-.main-right .likeshop .noneto { line-height: 120px; display: block; text-align: center; }
+.main-right .sort-type .address-select:hover .content { display: block; }
+
+.main-right .sort-type .address-select .content { position: absolute; top: 21px; left: -135px; width: 370px; height: 380px; z-index: 10; border: 1px solid #ccc; background: #fff; display: none; }
+
+.main-right .sort-type .address-select .content .top { padding: 16px 32px 0 15px; }
+
+.main-right .sort-type .address-select .content .top .cydq p { height: 16px; font-size: 12px; line-height: 16px; font-weight: bold; }
+
+.main-right .sort-type .address-select .content .top .cydq div.cy { margin: 20px 0; }
+
+.main-right .sort-type .address-select .content .top .cydq div.cy span { margin-right: 65px; }
+
+.main-right .sort-type .address-select .content .top .cydq div.cy span:last-child { margin-right: 0; }
+
+.main-right .sort-type .address-select .content .top .cydq div.sf { padding-top: 10px; }
+
+.main-right .sort-type .address-select .content .top .cydq div.sf .warp { width: 80px; float: left; margin-bottom: 10px; }
+
+.main-right .sort-type .address-select .content .top .cydq div.sf .warp .zm { padding-right: 6px; }
+
+.main-right .sort-type .address-select .content .top .cydq div.sf .warp .warp-city span { display: block; padding-left: 6px; border-left: 1px dotted #ccc; }
+
+.main-right .sort-type .address-select .content .bottom { padding-left: 10px; height: 25px; line-height: 25px; background: #F1F1F1; }
+
+.main-right .sort-type .page { width: 50px; height: 20px; border: 1px solid #ccc; box-sizing: border-box; line-height: 20px; text-align: center; margin: 8px 2px; background: #fff; color: #000; }
+
+.main-right .sort-type .page.none { color: #AAAAAA; background: #FAFAFA; }
+
+.main-right .current-goodlist { height: 1012px; width: 1000px; background: #1de; position: relative; }
+
+.main-right .current-goodlist li { position: relative; float: left; margin: 5px 20px 5px 0; transition: all .2s linear; }
+
+.main-right .current-goodlist li .item { border: 1px solid #ccc; width: 228px; height: 343px; }
+
+.main-right .current-goodlist li .warp { padding: 0 10px; }
+
+.main-right .current-goodlist li img { display: block; width: 228px; height: 230px; }
+
+.main-right .current-goodlist li p.name { font-size: 12px; line-height: 17px; margin-bottom: 10px; }
+
+.main-right .current-goodlist li p.price-warp { margin-bottom: 15px; }
+
+.main-right .current-goodlist li p.price-warp em { color: #FFA500; font-weight: bold; }
+
+.main-right .current-goodlist li:nth-child(4n) { margin-right: 0; }
+
+.main-right .current-goodlist li:hover .item { margin: -4px; border: 5px solid #FFA500; box-shadow: 0px 4px 4px rgba(102, 102, 102, 0.65); }
+
+.main-right .goodlist-page { margin: 10px auto 20px; font-size: 0; }
+
+.main-right .goodlist-page .page { height: 38px; width: 470px; margin: 0 auto; line-height: 38px; border: 1px solid #ccc; }
+
+.main-right .goodlist-page span { font-size: 12px; display: inline-block; border-right: 1px solid #ccc; text-align: center; }
+
+.main-right .goodlist-page .num, .main-right .goodlist-page .more { width: 36px; }
+
+.main-right .goodlist-page .none, .main-right .goodlist-page .current { background: #FAFAFA; }
+
+.main-right .goodlist-page .tag { width: 44px; }
+
+.main-right .goodlist-page .intag { width: 60px; }
+
+.main-right .goodlist-page .endpage { border-right: 0; }
+
+.main-right .likethink { border: 1px solid #ccc; }
+
+.main-right .likethink .likeshop { min-height: 120px; border-top: 1px solid #ccc; }
+
+.main-right .likethink .likeshop .noneto { line-height: 120px; display: block; text-align: center; }
