--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -44,3 +44,19 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+%mallvvArrow{
+    content: "";
+    position: relative;
+    font-size: 0px;
+    line-height: 0;
+    vertical-align: middle;
+    display: inline-block;
+    width: 0px;
+    height: 0px;
+    border-width: 4px;
+    border-color: #777 transparent transparent transparent;
+    border-style: solid dashed dashed dashed;
+    transition: all .3s ease;
+    transform-origin: 50% 30%;
+}
