--- a/src/sass/top.scss
+++ b/src/sass/top.scss
@@ -319,19 +319,8 @@ $pub_nav_h:30px;
                     background: url(../img/top/top_bg.png) no-repeat -120px 0;
                 }
                 &::after{
-                    content: "";
-                    position: relative;
-                    font-size: 0px;
-                    line-height: 0;
-                    vertical-align: middle;
-                    display: inline-block;
-                    width: 0px;
-                    height: 0px;
                     margin-left: 8px;
-                    border-width: 4px;
-                    border-color: #777 transparent transparent transparent;
-                    border-style: solid dashed dashed dashed;
-                    transition: all .3s ease;
+                    @extend %mallvvArrow;
                 }
                 &:hover{
                     background: #fff;
@@ -393,6 +382,7 @@ $pub_nav_h:30px;
         }
     }
 }
+
 .pub-header-bottom{
     border-bottom: 2px solid #000;
     .container{
@@ -530,5 +520,21 @@ $pub_nav_h:30px;
             }
         }
        
+    }
+}
+
+// 公用导航样式
+.mallvv-current-nav{
+    height: 40px;
+    line-height: 40px;
+    font-size: 0;
+    i{
+        font-size: 14px;
+        color: #AAAAAA;
+        margin-left: 1px;
+    }
+    span{
+        font-size: 12px;
+        margin: 0 3px;
     }
 }
